fixed expense align, changed add button icon

--- a/frontend/src/components/IncomeAndExpense.css
+++ b/frontend/src/components/IncomeAndExpense.css
@@ -71,7 +71,7 @@ body {
 }
 
 .budget__expense {
-    background-color: #ff8484;
+    background-color: #fd7d7d;
 }
 
 .budget__income-value,
@@ -134,8 +134,8 @@ button {
 
 .add__btn__expense {
     color: #e74c3c;
-    background-color: #e9e9e9;
-    /* border-color: #575757; */
+    width: 25px;
+    height: auto;
 }
 
 .add__btn {
