--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -6,7 +6,7 @@
 #button-hover {
     transition: 0.3s;
 }
-.site-logo{
+/* .site-logo{
     font-family: 'Ink Free';
     font-size: 50px !important;
-}
+} */
